added a few corrections

--- a/ds/notebook.ipynb
+++ b/ds/notebook.ipynb
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "03164166",
    "metadata": {},
    "outputs": [],
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "ef71d437",
    "metadata": {},
    "outputs": [
@@ -444,18 +444,82 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7ce94f3",
+   "id": "1d7c9dba",
    "metadata": {},
-   "source": []
+   "source": [
+    "Loaded CSV and pulls out the latitude/longitude columns as a simple list of (lat, lon) pairs."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fb8ff61",
+   "id": "3af5b342",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(df.head(10))"
+    "import pandas as pd\n",
+    "import random                                    \n",
+    "from geopy.distance import geodesic\n",
+    "\n",
+    "data = pd.read_csv('data.csv')\n",
+    "\n",
+    "# Extract latitude & longitude into a list of tuples\n",
+    "locs = list(zip(data['latitude'], data['longitude']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "472990e2",
+   "metadata": {},
+   "source": [
+    "Code picks a random order of locations, then calculates and prints the total distance of random route."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d39c773",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.seed(1)                       \n",
+    "route_rand = locs.copy()     \n",
+    "random.shuffle(route_rand)\n",
+    "\n",
+    "rand_km = sum(geodesic(route_rand[i], route_rand[i+1]).km\n",
+    "    for i in range(len(route_rand) - 1))\n",
+    "print(f\"Random route ≈ {rand_km:.0f} km\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d2114bb",
+   "metadata": {},
+   "source": [
+    "Implements a simple 'nearest‑neighbor' tour, that start at the first point, repeatedly go to the closest unvisited location, then sum and print the total distance of that route."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dea5b8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unvisited = locs.copy()\n",
+    "route_nn = [unvisited.pop(0)]\n",
+    "\n",
+    "while unvisited: \n",
+    "    last_point = route_nn[-1] \n",
+    "    idx = min(\n",
+    "        range(len(unvisited)),\n",
+    "        key=lambda i: geodesic(last_point, unvisited[i]).km\n",
+    "    )\n",
+    "    route_nn.append(unvisited.pop(idx))\n",
+    "\n",
+    "nn_km = sum(geodesic(route_nn[i], route_nn[i+1]).km\n",
+    "    for i in range(len(route_nn) - 1))\n",
+    "print(f\"Nearest‐neighbor ≈ {nn_km:.0f} km\")  "
    ]
   },
   {
@@ -464,6 +528,14 @@
    "metadata": {},
    "source": [
     "### Optimized Route"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c396f09",
+   "metadata": {},
+   "source": [
+    "This tiny snippet lets you calculate the total length."
    ]
   },
   {
@@ -532,7 +604,14 @@
    "cell_type": "markdown",
    "id": "6fb0200d",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "from geopy.distance import geodesic\n",
+    "\n",
+    "def route_distance(route):\n",
+    "    return sum(geodesic(route[i], route[i+1]).km\n",
+    "        for i in range(len(route) - 1))"
+   ]
   }
  ],
  "metadata": {
