added_explanation_map

--- a/ds/notebook.ipynb
+++ b/ds/notebook.ipynb
@@ -438,7 +438,7 @@
      "output_type": "stream",
      "text": [
       "Optimized Distance: 8344 km\n",
-      "Time taken: 0.02 seconds\n"
+      "Time taken: 0.04 seconds\n"
      ]
     }
    ],
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "45bc55ad",
    "metadata": {},
    "outputs": [
@@ -1576,7 +1576,7 @@
          }
         },
         "title": {
-         "text": "Routes Comparison<br><sub>Initial: 13005.42 km | Optimized: 8344.50 km | Time: 0.02 sec</sub>"
+         "text": "Routes Comparison<br><sub>Initial: 13005.42 km | Optimized: 8344.50 km | Time: 0.04 sec</sub>"
         }
        }
       }
@@ -1630,8 +1630,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2f1eceac",
+   "metadata": {},
+   "source": [
+    "The graph above is a comparision between two travel routes for the selected top 10 landmarks and natural attractions on a map of the United States -- a randomly selected route and an optimized route (smallest distance route) between those 10 places. The route comparision visualization clearly demonstrates the significant impact of optimization on travel distance. From two routes compared -\n",
+    "     A randomly generated route covered a total distance of 13,005.42 km  \n",
+    "     An optimized route minimized the travel distance to 8,344.50 km. \n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "c24f93ea",
    "metadata": {},
    "outputs": [
@@ -2617,7 +2628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "042f2e3e",
    "metadata": {},
    "outputs": [
@@ -3507,7 +3518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "c2585273",
    "metadata": {},
    "outputs": [
