--- a/ds/notebook.ipynb
+++ b/ds/notebook.ipynb
@@ -1634,10 +1634,14 @@
    "id": "2f1eceac",
    "metadata": {},
    "source": [
-    "The graph above is a comparision between two travel routes for the selected top 10 landmarks and natural attractions on a map of the United States -- a randomly selected route and an optimized route (smallest distance route) between those 10 places. The route comparision visualization clearly demonstrates the significant impact of optimization on travel distance. From two routes compared -\n",
-    "     A randomly generated route covered a total distance of 13,005.42 km  \n",
-    "     An optimized route minimized the travel distance to 8,344.50 km. \n",
-    "\n"
+    "The graph above is a comparision between two travel routes for the selected top 10 landmarks and natural attractions on a map of the United States -- a randomly selected route and an optimized route (smallest distance route) between those 10 places.\n",
+    "\n",
+    "The route comparision visualization clearly demonstrates the significant impact of optimization on travel distance.\n",
+    "From two routes compared:\n",
+    "- A randomly generated route covered a total distance of 13,005.42 km.\n",
+    "- An optimized route minimized the travel distance to 8,344.50 km. \n",
+    "\n",
+    "This resulted in reduction of approximately 4660 km reflecting an efficiancy gain of over 35%. The optimization process was completed in just 0.04 seconds, indicating the use of a highly efficient algorithm suitable for real-time applications and showcasing how route optimization can be useful for saving time, fuel, and money in real-life travel or delivery planning. "
    ]
   },
   {
@@ -2624,6 +2628,26 @@
     "    margin=dict(t=40, b=150),\n",
     "    )\n",
     "bar_fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d557423f",
+   "metadata": {},
+   "source": [
+    "The bar graph above shows the distance between each stop in the optimized travel route. Here the X-axis represents each stop of the trip, while the Y-axis shows the distance in kilometers. The bars are color-coded according to distance, with lighter colors indicating shorter stops and darkers shades indicating longer distances. This makes it easy to visually spot which parts of the journey are the longest. \n",
+    "\n",
+    "Key Observations\n",
+    "- The longest leg in the optimized route is between Golden Gate Bridge → Great Smoky Mountains, covering over 3,000 km. This is also visually confirmed by the darkest color bar.\n",
+    "- The shortest leg is between Grand Canyon National Park → Zion National Park, with a distance under 300 km.\n",
+    "- Most legs fall in the 500–1500 km range, which reflects efficient routing between nearby landmarks.\n",
+    "- Only one leg (Golden Gate to Great Smoky Mountains) stands out as a long-distance jump, which likely couldn’t be avoided given the geographic locations.\n",
+    "\n",
+    "Conclusions\n",
+    "\n",
+    "The bar chart shows how distance is distributed across each leg of the optimized route. It highlights that while most stops are relatively close to one another, certain legs are significantly longer, possibly due to unavoidable geographic separation.\n",
+    "\n",
+    "This kind of analysis is helpful in planning rest stops, fuel usage, and time allocation. It reinforces the importance of optimization in managing long-distance travel effectively — especially when some destinations are far apart."
    ]
   },
   {
