--- a/ds/notebook.ipynb
+++ b/ds/notebook.ipynb
@@ -3541,6 +3541,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e13be120",
+   "metadata": {},
+   "source": [
+    "The above pie-chart represents the precentage of total travel distance each segment(leg) contributes to the optimized travel route. Each segment is labeled and color coded to show how much of the total journey it take up. This helps visualize which legs are the longest and how the distance is distributed across the entire route. \n",
+    "\n",
+    "Key Observations\n",
+    "- The largest share of the total distance (41.5%) comes from the leg Golden Gate Bridge → Great Smoky Mountains, confirming it as the longest and most significant stretch of the trip.\n",
+    "\n",
+    "- The shortest leg, Grand Canyon National Park → Zion National Park, contributes only 1.86% of the total distance.\n",
+    "\n",
+    "- Most other legs fall between 4% and 18%, showing that the rest of the trip is more evenly spread out in terms of distance.\n",
+    "\n",
+    "- The second-largest leg is Mount Rushmore → Yosemite National Park, which accounts for 18.1% of the total distance.\n",
+    "\n",
+    "Conclusion\n",
+    "\n",
+    "This chart clearly shows that the overall travel distance is not evenly distributed. While most legs cover moderate distances, a single leg (Golden Gate to Great Smoky Mountains) accounts for nearly half the total journey. This emphasizes how a single long stretch can significantly impact the total route length.\n",
+    "\n",
+    "Understanding distance share helps in budgeting, fuel planning, and time management, especially when planning long trips. It also reinforces the value of optimized route planning to minimize the impact of longer unavoidable legs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "c2585273",
@@ -4448,6 +4471,35 @@
     "    margin=dict(l=40, r=20, t=40, b=40))\n",
     "\n",
     "fig_cumulative.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7dd071b",
+   "metadata": {},
+   "source": [
+    "The above line graph shows the growing total distance (km) traveled as a trip progresses through multiple US landmards and national parks. \n",
+    "\n",
+    "Key Observations\n",
+    "- The journey begins at Grand Canyon National Park with an initial cumulative distance near 0 km.\n",
+    "- There’s a steady increase in cumulative distance as the route continues through Zion, Arches, and Yellowstone National Parks. The climb in distance here is consistent but moderate.\n",
+    "- A noticeable steep rise is observed between Yosemite National Park and the Golden Gate Bridge, indicating a significant geographical leap. This is the largest increase between any two points.\n",
+    "- After reaching Golden Gate Bridge, the route continues to Great Smoky Mountains, Niagara Falls, and finally the Statue of Liberty, with the total distance approaching around 8300 km.\n",
+    "- These final legs maintain a higher base distance but with relatively smaller increases compared to the Yosemite–Golden Gate segment.\n",
+    "\n",
+    "Conclusion:\n",
+    "The cumulative distance graph highlights a scenic cross-country journey that starts in the western U.S. and ends in the northeast. While most travel segments build distance gradually, the leg from Yosemite to Golden Gate Bridge stands out as a major jump—suggesting a shift from inland to coastal travel. Overall, the graph effectively tracks how each stop adds to the journey, culminating in a total distance of over 8000 km, showcasing the vast geographic spread and diversity of the route.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "Ask ChatGPT\n",
+    "\n",
+    "\n"
    ]
   }
  ],
