--- a/ds/notebook.ipynb
+++ b/ds/notebook.ipynb
@@ -4488,18 +4488,7 @@
     "- These final legs maintain a higher base distance but with relatively smaller increases compared to the Yosemite–Golden Gate segment.\n",
     "\n",
     "Conclusion:\n",
-    "The cumulative distance graph highlights a scenic cross-country journey that starts in the western U.S. and ends in the northeast. While most travel segments build distance gradually, the leg from Yosemite to Golden Gate Bridge stands out as a major jump—suggesting a shift from inland to coastal travel. Overall, the graph effectively tracks how each stop adds to the journey, culminating in a total distance of over 8000 km, showcasing the vast geographic spread and diversity of the route.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "Ask ChatGPT\n",
-    "\n",
-    "\n"
+    "The cumulative distance graph highlights a scenic cross-country journey that starts in the western U.S. and ends in the northeast. While most travel segments build distance gradually, the leg from Yosemite to Golden Gate Bridge stands out as a major jump—suggesting a shift from inland to coastal travel. Overall, the graph effectively tracks how each stop adds to the journey, culminating in a total distance of over 8000 km, showcasing the vast geographic spread and diversity of the route.\n"
    ]
   }
  ],
