--- a/ds/notebook.ipynb
+++ b/ds/notebook.ipynb
@@ -438,7 +438,7 @@
      "output_type": "stream",
      "text": [
       "Optimized Distance: 8344 km\n",
-      "Time taken: 0.04 seconds\n"
+      "Time taken: 0.02 seconds\n"
      ]
     }
    ],
@@ -1576,7 +1576,7 @@
          }
         },
         "title": {
-         "text": "Routes Comparison<br><sub>Initial: 13005.42 km | Optimized: 8344.50 km | Time: 0.04 sec</sub>"
+         "text": "Routes Comparison<br><sub>Initial: 13005.42 km | Optimized: 8344.50 km | Time: 0.02 sec</sub>"
         }
        }
       }
@@ -1587,10 +1587,10 @@
    ],
    "source": [
     "#  Map Visualization\n",
-    "map_fig = go.Figure()\n",
+    "fig_map = go.Figure()\n",
     "\n",
     "# Markers for all locations\n",
-    "map_fig.add_trace(go.Scattermapbox(\n",
+    "fig_map.add_trace(go.Scattermapbox(\n",
     "    lat=locations['latitude'],\n",
     "    lon=locations['longitude'],\n",
     "    mode='markers',\n",
@@ -1600,7 +1600,7 @@
     "))\n",
     "\n",
     "# Optimized route\n",
-    "map_fig.add_trace(go.Scattermapbox(\n",
+    "fig_map.add_trace(go.Scattermapbox(\n",
     "    lat=route['latitude'].tolist() + [route['latitude'].iloc[0]],\n",
     "    lon=route['longitude'].tolist() + [route['longitude'].iloc[0]],\n",
     "    mode='lines+markers',\n",
@@ -1610,7 +1610,7 @@
     "))\n",
     "\n",
     "# Random route\n",
-    "map_fig.add_trace(go.Scattermapbox(\n",
+    "fig_map.add_trace(go.Scattermapbox(\n",
     "    lat=random_route['latitude'].tolist() + [random_route['latitude'].iloc[0]],\n",
     "    lon=random_route['longitude'].tolist() + [random_route['longitude'].iloc[0]],\n",
     "    mode='lines+markers',\n",
@@ -1619,14 +1619,14 @@
     "    name='Random Route'\n",
     "))\n",
     "\n",
-    "map_fig.update_layout(\n",
+    "fig_map.update_layout(\n",
     "    mapbox_style='open-street-map',\n",
     "    mapbox_center={\"lat\": locations['latitude'].mean(), \"lon\": locations['longitude'].mean()},\n",
     "    mapbox_zoom=4,\n",
     "    margin=dict(t=40, b=40),\n",
     "    title=f\"Routes Comparison<br><sub>Initial: {baseline_distance:.2f} km | Optimized: {distance:.2f} km | Time: {duration:.2f} sec</sub>\"\n",
     ")\n",
-    "map_fig.show()\n"
+    "fig_map.show()\n"
    ]
   },
   {
@@ -2614,7 +2614,7 @@
    "source": [
     "# Bar Chart (Distance per Leg)\n",
     "\n",
-    "bar_fig = px.bar(\n",
+    "fig_bar = px.bar(\n",
     "    leg_dists_df,\n",
     "    x='Leg',\n",
     "    y='Distance_km',\n",
@@ -2627,7 +2627,7 @@
     "    xaxis_tickangle=-45, \n",
     "    margin=dict(t=40, b=150),\n",
     "    )\n",
-    "bar_fig.show()\n"
+    "fig_bar.show()\n"
    ]
   },
   {
@@ -4493,7 +4493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "a2493225",
    "metadata": {},
    "outputs": [
