--- a/ds/notebook.ipynb
+++ b/ds/notebook.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7e22736d",
+   "metadata": {},
+   "source": [
+    "# Introduction"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "bff4f22d",
@@ -5493,6 +5501,24 @@
     "\n",
     "Conclusion:\n",
     "This chart reveals that while most legs of the journey are manageable in under a day of driving, the Golden Gate Bridge to Great Smoky Mountains segment is a major outlier and logistical challenge. This leg alone could significantly impact scheduling, rest requirements, and travel fatigue. Strategically, it might benefit from being broken up with an intermediate stop to balance the overall trip more evenly. The visualization clearly emphasizes how varied driving times can be, even if cumulative distance appears linear."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae124f56",
+   "metadata": {},
+   "source": [
+    "# Overall Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "814f25fc",
+   "metadata": {},
+   "source": [
+    "The project is to explore how travel routes between popular US landmarks and natural attractions can be optimized for distance and efficiency. By comparing randomly generated route with an optimized one, it is known that optimized route reduced the total distance by over 4600km or approximately 35%. This finding shows the importance and potential impact of optimization techniques in real-life travel planning, logistics, and delivery routing. \n",
+    "\n",
+    "Different visualizations allowed us to break down each stop of the journey, reflecting on the stretches that covered the most ground. It was known that the Golden Gate Bridge to Great Smoky Mountains accounted for over 40% "
    ]
   }
  ],
