--- a/ds/notebook.ipynb
+++ b/ds/notebook.ipynb
@@ -5518,7 +5518,21 @@
    "source": [
     "The project is to explore how travel routes between popular US landmarks and natural attractions can be optimized for distance and efficiency. By comparing randomly generated route with an optimized one, it is known that optimized route reduced the total distance by over 4600km or approximately 35%. This finding shows the importance and potential impact of optimization techniques in real-life travel planning, logistics, and delivery routing. \n",
     "\n",
-    "Different visualizations allowed us to break down each stop of the journey, reflecting on the stretches that covered the most ground. It was known that the Golden Gate Bridge to Great Smoky Mountains accounted for over 40% "
+    "Visualizations like bar graphs and donut charts helped break down the route step-by-step, making it easy to spot which parts of the trip involved the most travel. For example, the stretch between the Golden Gate Bridge and Great Smoky Mountains made up over 40% of the entire journey. Insights like these can guide decisions around where to plan longer breaks, how much fuel might be needed for each segment, and how the overall travel load is distributed.\n",
+    "\n",
+    "For future development, several enhancements can increase the value and realism of the project:\n",
+    "- Allow users to select a subset of locations from the available 10 (or more) and generate an optimal route based on their personal preferences.\n",
+    "- Attach additional travel data such as nearby hotels, restaurants, gas stations, and tourist information using public APIs like Google Places or Yelp Fusion.\n",
+    "- Expand the dataset to include more attractions across all U.S. regions, enabling longer or themed trips (e.g., only national parks or only historical sites).\n",
+    "- Incorporate real-time data such as live traffic, weather conditions, or road closures for smarter route planning.\n",
+    "- Optimize for different goals, such as shortest time, most scenic path, or lowest cost, using multi-objective optimization methods.\n",
+    "- Create a web-based dashboard or app (using tools like Streamlit, Dash, or Flask) where users can interactively choose destinations and view the updated optimized route with stats, maps, and tips.\n",
+    "- Add features for eco-conscious travelers, such as calculating carbon footprints or suggesting EV charging stations along the way.\n",
+    "- Provide a personalized itinerary generator, complete with travel times, estimated arrival dates, and rest stop suggestions.\n",
+    "- By implementing these improvements, the project can evolve from a route optimization model into a full-featured travel planning tool — practical, user-centric, and ready for real-world use.\n",
+    "\n",
+    "While still in its basic stage, this project sets the foundation for building a smarter and more personalized travel planning system — one that can grow with added features, real-time data, and user-focused design.\n",
+    "\n"
    ]
   }
  ],
