--- a/ds/notebook.ipynb
+++ b/ds/notebook.ipynb
@@ -9,6 +9,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4efb1660",
+   "metadata": {},
+   "source": [
+    "Traveling across the United States offers a wealth of iconic landmarks and breathtaking natural attractions, but planning the most efficient route between multiple destinations can be a real challenge. This project aims to simplify that process by using data to build an optimized travel route across 10 of the most popular U.S. landmarks. The primary objective of this project was to first establish a baseline route by selecting the next destination at random. This initial route served as a reference point for further optimization. Using the total travel distance from the baseline route, an optimized route was then generated based on minimizing the overall distance using machine learning modeling techniques.\n",
+    "\n",
+    "This dataset was manually compiled to support a road trip planning project focused on identifying and optimizing travel routes between popular destinations. It includes information on 10 well-known landmarks and natural attractions across the United States. For each destination, the dataset records the state, latitude, longitude, and category (e.g., landmark or natural attraction), resulting in a total of 10 rows and 5 columns.\n",
+    "\n",
+    "As the dataset was curated manually and is relatively small in size, no preprocessing or data cleaning was necessary. Additional sections of this report provide detailed descriptions of the modeling approach, visualizations used to support the analysis, and key conclusions drawn from the project."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "bff4f22d",
@@ -382,10 +394,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "38790e19",
+   "metadata": {},
+   "source": [
+    "## Modeling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85ee180d",
+   "metadata": {},
+   "source": [
+    "### First Approach"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d86633bb",
    "metadata": {},
    "source": [
-    "### Baseline Route"
+    "#### Baseline Route"
    ]
   },
   {
@@ -432,7 +460,7 @@
    "id": "0d469e76",
    "metadata": {},
    "source": [
-    "### Optimized Route"
+    "#### Optimized Route"
    ]
   },
   {
@@ -446,7 +474,7 @@
      "output_type": "stream",
      "text": [
       "Optimized Distance: 8344 km\n",
-      "Time taken: 0.02 seconds\n"
+      "Time taken: 0.05 seconds\n"
      ]
     }
    ],
@@ -499,10 +527,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e32fbc60",
+   "metadata": {},
+   "source": [
+    "### Second Approach"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1d7c9dba",
    "metadata": {},
    "source": [
-    "Loaded CSV and pulls out the latitude/longitude columns as a simple list of (lat, lon) pairs."
+    "Pulls out the latitude/longitude columns as a simple list of (lat, lon) pairs."
    ]
   },
   {
@@ -514,6 +550,14 @@
    "source": [
     "# Extract latitude & longitude into a list of tuples\n",
     "locs = list(zip(data['latitude'], data['longitude']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1975c7e",
+   "metadata": {},
+   "source": [
+    "#### Baseline Route"
    ]
   },
   {
@@ -548,6 +592,14 @@
     "rand_km = sum(geodesic(route_rand[i], route_rand[i+1]).km\n",
     "    for i in range(len(route_rand) - 1))\n",
     "print(f\"Random route ≈ {rand_km:.0f} km\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f2af625",
+   "metadata": {},
+   "source": [
+    "#### Optimized Route"
    ]
   },
   {
@@ -588,6 +640,18 @@
     "nn_km = sum(geodesic(route_nn[i], route_nn[i+1]).km\n",
     "    for i in range(len(route_nn) - 1))\n",
     "print(f\"Nearest‐neighbor ≈ {nn_km:.0f} km\")  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0faeb2ab",
+   "metadata": {},
+   "source": [
+    "Model Description \n",
+    "\n",
+    "To find the optimal distance - that is find the route to minimize the distance we created two models; baseline and optimized model. Before making optimized model, we created a baseline model. This model builds a route by randomly selecting next location. Baseline model is used as a starting point to compare better model which in this case is Optimized model. We used Python's `random` modele to shuffle the order of the locations and the `geopy` library to calculate the total distance of the route.To solve the route optimization problem, we created a model that applies the Newest algorithm to determine a travel path that minimizes the total distance between a series of geographic locations. The core idea of the algorithm is to starts from an initial point, then it randomly selects the nearest unvisited location until all points have been visited. The distance between each pair of locations is calculated using the `geopy` library's `geodesic` function, which measures distances between two points on a curved surface (like the Earth's) using geographic coordinate system - latitude (Y-axis) and longitude (X-axis) coordinates. \n",
+    "We experimented with two different approches of this algorithm. The first used a pandas-based approch, where each location was stored as a row in a DataFrame. This method was helpful when working with extra information such as name, place, or category because pandas makes it easier to organize and view the kind of data. The second one is used a list-based approach, where each location was sorted as a tuple of (latitude, longitude).The route was constructed by modifying a list of unvisited points and appending the nearest one at each step. This method was much simpler and faster especially because the dataset was small and didn't include any extra details. \n",
+    "After testing both methods, we chose the list-based version as the final approch. It was easier to read, ran quickly, and fit better with the size and simplicity of the dataset. "
    ]
   },
   {
@@ -1584,7 +1648,7 @@
          }
         },
         "title": {
-         "text": "Routes Comparison<br><sub>Initial: 13005.42 km | Optimized: 8344.50 km | Time: 0.02 sec</sub>"
+         "text": "Routes Comparison<br><sub>Initial: 13005.42 km | Optimized: 8344.50 km | Time: 0.05 sec</sub>"
         }
        }
       }
