--- a/ds/notebook.ipynb
+++ b/ds/notebook.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "2cdcc3f1",
+   "metadata": {},
+   "source": [
+    "# Best Summer Sightseeing Roadtrip Project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7e22736d",
    "metadata": {},
    "source": [
@@ -691,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 78,
    "id": "45bc55ad",
    "metadata": {},
    "outputs": [
@@ -1704,7 +1712,7 @@
     "    mapbox_center={\"lat\": locations['latitude'].mean(), \"lon\": locations['longitude'].mean()},\n",
     "    mapbox_zoom=4,\n",
     "    margin=dict(t=40, b=40),\n",
-    "    title=f\"Routes Comparison<br><sub>Initial: {baseline_distance:.2f} km | Optimized: {distance:.2f} km | Time: {duration:.2f} sec</sub>\"\n",
+    "    title=f\"Routes Comparison<br><sub>Initial: {baseline_distance:.2f} km | Optimized: {distance:.2f} km | Time: {duration:.2f} sec</sub>\",\n",
     ")\n",
     "fig_map.show()\n"
    ]
@@ -1726,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 75,
    "id": "c24f93ea",
    "metadata": {},
    "outputs": [
@@ -2661,7 +2669,13 @@
          }
         },
         "title": {
-         "text": "Optimized Route: Distance per Leg"
+         "font": {
+          "size": 20
+         },
+         "text": "Optimized Route: Distance per Leg",
+         "x": 0.5,
+         "xanchor": "center",
+         "yanchor": "top"
         },
         "xaxis": {
          "anchor": "y",
@@ -2704,6 +2718,7 @@
     "    title='Optimized Route: Distance per Leg',\n",
     "    labels={'Distance_km': 'Distance (km)'},\n",
     ").update_layout(\n",
+    "    title={'text': \"Optimized Route: Distance per Leg\", 'x': 0.5, 'xanchor': 'center', 'yanchor': 'top', 'font': {'size': 20}},\n",
     "    xaxis_tickangle=-45, \n",
     "    margin=dict(t=40, b=150),\n",
     "    )\n",
@@ -2732,7 +2747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 70,
    "id": "042f2e3e",
    "metadata": {},
    "outputs": [
@@ -2772,10 +2787,16 @@
         }
        ],
        "layout": {
+        "legend": {
+         "x": 1.02,
+         "xanchor": "left",
+         "y": 0.5,
+         "yanchor": "middle"
+        },
         "margin": {
-         "b": 20,
-         "l": 20,
-         "r": 20,
+         "b": 40,
+         "l": 40,
+         "r": 40,
          "t": 40
         },
         "template": {
@@ -3595,7 +3616,13 @@
          }
         },
         "title": {
-         "text": "Distance Share per Leg"
+         "font": {
+          "size": 20
+         },
+         "text": "Distance Share per Leg",
+         "x": 0.5,
+         "xanchor": "center",
+         "yanchor": "top"
         }
        }
       }
@@ -3613,8 +3640,13 @@
     "    sort=False,\n",
     "))\n",
     "fig_donut.update_layout(\n",
-    "    title=\"Distance Share per Leg\",\n",
-    "    margin=dict(l=20, r=20, t=40, b=20)\n",
+    "    title={'text': \"Distance Share per Leg\", 'x': 0.5, 'xanchor': 'center', 'yanchor': 'top', 'font': {'size': 20}},\n",
+    "    margin=dict(l=40, r=40, t=40, b=40),\n",
+    "    legend=dict(\n",
+    "        x=1.02,\n",
+    "        y=0.5,\n",
+    "        xanchor='left',\n",
+    "        yanchor='middle')\n",
     ")\n",
     "fig_donut.show()\n",
     "\n"
@@ -3645,7 +3677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 71,
    "id": "c2585273",
    "metadata": {},
    "outputs": [
@@ -4514,7 +4546,13 @@
          }
         },
         "title": {
-         "text": "Cumulative Distance by Stop"
+         "font": {
+          "size": 20
+         },
+         "text": "Cumulative Distance by Stop",
+         "x": 0.5,
+         "xanchor": "center",
+         "yanchor": "top"
         },
         "xaxis": {
          "title": {
@@ -4545,7 +4583,13 @@
     "    marker=dict(size=8)\n",
     "))\n",
     "fig_cumulative.update_layout(\n",
-    "    title=\"Cumulative Distance by Stop\",\n",
+    "    title= {\n",
+    "        'text': \"Cumulative Distance by Stop\",\n",
+    "        'x': 0.5,\n",
+    "        'xanchor': 'center',\n",
+    "        'yanchor': 'top',\n",
+    "        'font': {'size': 20}\n",
+    "    },\n",
     "    xaxis_title=\"Leg\",\n",
     "    yaxis_title=\"Distance (km)\",\n",
     "    margin=dict(l=40, r=20, t=40, b=40))\n",
@@ -4573,7 +4617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 73,
    "id": "a2493225",
    "metadata": {},
    "outputs": [
@@ -5508,7 +5552,13 @@
          }
         },
         "title": {
-         "text": "Estimated Travel Time per Leg"
+         "font": {
+          "size": 20
+         },
+         "text": "Estimated Travel Time per Leg",
+         "x": 0.5,
+         "xanchor": "center",
+         "yanchor": "top"
         },
         "xaxis": {
          "anchor": "y",
@@ -5552,7 +5602,8 @@
     "    title='Estimated Travel Time per Leg'\n",
     ").update_layout(\n",
     "    xaxis_tickangle=-45,\n",
-    "    margin=dict(t=40, b=120)\n",
+    "    margin=dict(t=40, b=120),\n",
+    "    title={'text': 'Estimated Travel Time per Leg', 'x': 0.5, 'xanchor': 'center', 'yanchor': 'top', 'font': {'size': 20}}\n",
     ")\n",
     "\n",
     "fig_time.show()"
@@ -5602,7 +5653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 74,
    "id": "f943d4c6",
    "metadata": {},
    "outputs": [
@@ -6470,9 +6521,13 @@
          }
         },
         "title": {
+         "font": {
+          "size": 20
+         },
          "text": "Total Travel Time Comparison",
          "x": 0.5,
-         "xanchor": "center"
+         "xanchor": "center",
+         "yanchor": "top"
         },
         "xaxis": {
          "title": {
@@ -6514,7 +6569,7 @@
     "\n",
     "# Update layout for the bar chart\n",
     "fig.update_layout(\n",
-    "    title={'text': \"Total Travel Time Comparison\", 'x': 0.5, 'xanchor': 'center'},\n",
+    "    title={'text': \"Total Travel Time Comparison\", 'x': 0.5, 'xanchor': 'center', 'yanchor': 'top', 'font': {'size': 20}},\n",
     "    yaxis_title=\"Time (hours)\",\n",
     "    xaxis_title=\"Routes\",\n",
     "    bargap=0.4,\n",
@@ -6547,7 +6602,7 @@
    "source": [
     "The project is to explore how travel routes between popular US landmarks and natural attractions can be optimized for distance and efficiency. By comparing randomly generated route with an optimized one, it is known that optimized route reduced the total distance by over 4600km or approximately 35%. This finding shows the importance and potential impact of optimization techniques in real-life travel planning, logistics, and delivery routing. \n",
     "\n",
-    "Visualizations like bar graphs and donut charts helped break down the route step-by-step, making it easy to spot which parts of the trip involved the most travel. For example, the stretch between the Golden Gate Bridge and Great Smoky Mountains made up over 40% of the entire journey. Insights like these can guide decisions around where to plan longer breaks, how much fuel might be needed for each segment, and how the overall travel load is distributed. Based on an average speed of 60 km/h, the optimized route could save travelers up to 77 hours of driving time compared to the random route — a significant reduction in both time and fatigue.\n",
+    "Visualizations like bar graphs and donut charts helped break down the route step-by-step, making it easy to spot which parts of the trip involved the most travel. For example, the stretch between the Golden Gate Bridge and Great Smoky Mountains made up over 40% of the entire journey. Insights like these can guide decisions around where to plan longer breaks, how much fuel might be needed for each segment, and how the overall travel load is distributed. Based on an average speed of 60 km/h, the optimized route could save travelers up to 78 hours of driving time compared to the random route — a significant reduction in both time and fatigue.\n",
     "\n",
     "For future development, several enhancements can increase the value and realism of the project:\n",
     "- Allow users to select a subset of locations from the available 10 (or more) and generate an optimal route based on their personal preferences.\n",
